--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "json-server": "^0.14.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
